tm-fix-collapse

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -20806,21 +20806,19 @@ input::-webkit-inner-spin-button {
 }
 #collapseExample {
   transition: all 0.15s ease;
-  background-color: #fff;
+  opacity: 0;
+  z-index: -1;
   position: absolute;
   top: 0;
   left: 0;
+  background-color: #fff;
+  display: flex;
+  height: 100%;
   width: 100%;
-  opacity: 0;
-  /*  display: flex;*/
-  /*  min-height: 85px;*/
 }
 #collapseExample.show {
+  z-index: 1021;
   opacity: 1;
-}
-#collapseExample .container {
-  padding-top: 0.5rem !important;
-  padding-bottom: 0.5rem !important;
 }
 #collapseExample .bi.bi-search::before {
   width: 22px;
@@ -20828,8 +20826,8 @@ input::-webkit-inner-spin-button {
 }
 #collapseExample .form-control {
   background-color: #f8f9fa;
-  padding-top: 1rem !important;
-  padding-bottom: 1rem !important;
+  padding-top: 0.75rem !important;
+  padding-bottom: 0.75rem !important;
   border: 2px solid #dee2e6;
   box-shadow: 0px 0px 0px 2px #fff;
   border-radius: 1rem;
@@ -20844,13 +20842,23 @@ input::-webkit-inner-spin-button {
 #collapseExample .form-control::placeholder {
   color: #6c757d;
 }
+#collapseExample .form-control:hover {
+  background-color: #fff;
+  box-shadow: 0px 0px 0px 2px rgba(33, 99, 232, 0.2);
+  border: 2px solid rgb(33, 99, 232);
+}
 #collapseExample .form-control:focus {
+  background-color: #fff;
   box-shadow: 0px 0px 0px 2px rgba(33, 99, 232, 0.2);
   border: 2px solid rgb(33, 99, 232);
 }
 #collapseExample .form-control::-webkit-search-cancel-button {
   -webkit-appearance: none;
   display: none;
+}
+
+.navbar #collapseExample .navbar-toggler {
+  display: block !important;
 }
 
 @media (min-width: 992px) {
