--- a/src/assets/scss/components/_navbar.scss
+++ b/src/assets/scss/components/_navbar.scss
@@ -355,22 +355,19 @@
 #collapseExample {
   -webkit-transition: all 0.15s ease;
   transition: all 0.15s ease;
-  background-color: $white;
+  opacity: 0;
+  z-index: -1;
   position: absolute;
   top: 0;
   left: 0;
+  background-color: $white;
+  display: flex;
+  height: 100%;
   width: 100%;
-  opacity: 0;
-/*  display: flex;*/
-/*  min-height: 85px;*/
-
+  
   &.show {
+    z-index: 1021;
     opacity: 1;
-  }
-
-  .container {
-    padding-top: 0.5rem !important;
-    padding-bottom: 0.5rem !important;
   }
 
   .bi.bi-search::before {
@@ -380,8 +377,8 @@
 
   .form-control {
     background-color: $gray-100;
-    padding-top: 1rem !important;
-    padding-bottom: 1rem !important;
+    padding-top: 0.75rem !important;
+    padding-bottom: 0.75rem !important;
     border: 2px solid $gray-300;
     box-shadow: 0px 0px 0px 2px $white;
     border-radius: 1rem;
@@ -394,7 +391,14 @@
       color: $gray-600;
     }
 
+    &:hover {
+      background-color: $white;
+      box-shadow: 0px 0px 0px 2px rgba(33, 99, 232, 0.2);
+      border: 2px solid rgba(33,99,232,1);
+    }
+
     &:focus {
+      background-color: $white;
       box-shadow: 0px 0px 0px 2px rgba(33, 99, 232, 0.2);
       border: 2px solid rgba(33,99,232,1);
     }
@@ -405,6 +409,12 @@
     }
   }
 }
+
+.navbar #collapseExample .navbar-toggler {
+  display: block !important;
+}
+
+
 
 @include media-breakpoint-up(lg) {
   .headroom--unpinned .navbar.navbar-main {
